@@ -1,8 +1,9 @@
 2020-03-17 Wiley E. Hill <wileyhill@gmail.com>
 
-    * src/geda/geda_pin.c: Add function:
+    * src/geda/geda_pin.c: Add functions:
 
           * geda_pin_get_sequence
+          * geda_pin_get_whichend
 
 2020-03-16 Wiley E. Hill <wileyhill@gmail.com>
 
